--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
-    <a href="Roll-A-Ball/Roll.html">Roll A Ball</a>
+    <a href="Roll.html">Roll A Ball</a>
   </body>
 </html>
