--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <a href="./Roll-A-Ball/Roll.html">Roll A Ball</a>
+    <a href="./Roll-A-Ball-2/Roll.html">Roll A Ball</a>
   </body>
 </html>
