--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   </head>
   <body>
-    <a href="./Roll-A-Ball/Roll.html">Roll A Ball</a>
-    <a href="./Roll-A-Ball-2/Roll.html">Roll A Ball</a>
+    <ul>
+      <li><a href="./Roll-A-Ball/Roll.html">Roll A Ball</a></li>
+      <li><a href="./Roll-A-Ball-Two/Roll.html">Roll A Ball</a></li>
+    </ul>
   </body>
 </html>
