--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <a href="./Roll-A-Ball/Roll.html">Roll A Ball</a>
     <a href="./Roll-A-Ball-2/Roll.html">Roll A Ball</a>
     <a href="./SpaceShooter/Space.html">Space Shooter v2</a>
+    <a href="./Tanks/Tanks.html">Tanks<a/>
   </body>
 </html>
