--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <a href="./Roll-A-Ball-2/Roll.html">Roll A Ball</a>
     <a href="./SpaceShooter/Space.html">Space Shooter v2</a>
     <a href="./Tanks/Tanks.html">Tanks<a/>
-    <a href="./CarsTest/CarsTest.html">Cars<a/>
+    <a href="./CarsTest/CarsTest/cars.html">Cars<a/>
   </body>
 </html>
